--- a/spark/lab/docker-compose.yml
+++ b/spark/lab/docker-compose.yml
@@ -11,9 +11,10 @@ services:
       - rest
       - minio
     volumes:
-      - ./warehouse:/home/iceberg/warehouse
-      - ./notebooks:/home/iceberg/notebooks/notebooks
-      - ./data:/home/iceberg/data
+      - ../spark-warehouse:/home/iceberg/warehouse
+      - ../notebooks:/home/iceberg/notebooks/notebooks
+      - ../data:/home/iceberg/data
+      - ../src:/home/iceberg/src
     environment:
       - AWS_ACCESS_KEY_ID=admin
       - AWS_SECRET_ACCESS_KEY=password
