--- a/flink/lab/Makefile
+++ b/flink/lab/Makefile
@@ -46,7 +46,7 @@ down:
 .PHONY: job
 ## Submit the Flink job
 job:
-	docker compose exec jobmanager ./bin/flink run -py /opt/src/job/start_job.py --pyFiles /opt/src -d
+	docker compose exec jobmanager ./bin/flink run -py /opt/src/start_job.py --pyFiles /opt/src -d
 
 aggregation_job:
 	docker compose exec jobmanager ./bin/flink run -py /opt/src/job/aggregation_job.py --pyFiles /opt/src -d
