--- a/flink/lab/docker-compose.yml
+++ b/flink/lab/docker-compose.yml
@@ -13,8 +13,8 @@ services:
     ports:
       - "8081:8081"
     volumes:
-      - ./:/opt/flink/usrlib
-      - ./src/:/opt/src
+      - ../:/opt/flink/usrlib
+      - ../src/:/opt/src
     command: jobmanager
     extra_hosts:
       - "host.docker.internal:host-gateway" #// Access services on the host machine from within the Docker container
@@ -39,8 +39,8 @@ services:
       - "6121"
       - "6122"
     volumes:
-      - ./:/opt/flink/usrlib
-      - ./src/:/opt/src
+      - ../:/opt/flink/usrlib
+      - ../src/:/opt/src
     depends_on:
       - jobmanager
     command: taskmanager --taskmanager.registration.timeout 5 min
